--- a/src/index.njk
+++ b/src/index.njk
@@ -7,21 +7,21 @@
         <script type="module" src="./js/main.js"></script>
     </head>
     <body>
-        <main>
-            <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px;">
-                <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="/">
-                    <!-- image placeholder -->
-                    <span class="fs-4">Sidebar</span>
-                </a>
-                <hr>
-                <ul class="nav nav-pills flex-column mb-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page">
+        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px;">
+            <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="/">
+                <!-- image placeholder -->
+                <span class="fs-4">Sidebar</span>
+            </a>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" aria-current="page">
 
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <main>
         </main>
         <div class="container py-4 px-3 mx-auto">
             <h1>Hello, Bootstrap and Vite!</h1>
