Added logo image and links.

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,15 +9,17 @@
     <body>
         <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px;">
             <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="/">
-                <!-- image placeholder -->
-                <span class="fs-4">Sidebar</span>
+                <img src="./img/sitelogo.png" alt="image of a computer monitor with a closing XML tag on it">
+                <span class="fs-4">IDT 554</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page">
-
-                    </a>
+                    <a class="nav-link active" href="/index.html" aria-current="page">Home</a>
+                    <a class="nav-link active" href="/about.html" aria-current="page">About</a>
+                    <a class="nav-link active" href="/logseq.html" aria-current="page">Logseq</a>
+                    <a class="nav-link active" href="/obsidian.html" aria-current="page">Obsidian</a>
+                    <a class="nav-link active" href="/tiddlywiki.html" aria-current="page">TiddlyWiki</a>
                 </li>
             </ul>
         </nav>
