--- a/src/index.njk
+++ b/src/index.njk
@@ -15,11 +15,11 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/index.html" aria-current="page">Home</a>
-                    <a class="nav-link active" href="/about.html" aria-current="page">About</a>
-                    <a class="nav-link active" href="/logseq.html" aria-current="page">Logseq</a>
-                    <a class="nav-link active" href="/obsidian.html" aria-current="page">Obsidian</a>
-                    <a class="nav-link active" href="/tiddlywiki.html" aria-current="page">TiddlyWiki</a>
+                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/index.html" {% if page == 'home' %}aria-current="page"{% endif %}>Home</a>
+                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/about.html" {% if page == 'home' %}aria-current="page"{% endif %}>About</a>
+                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/logseq.html" {% if page == 'home' %}aria-current="page"{% endif %}>Logseq</a>
+                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/obsidian.html" {% if page == 'home' %}aria-current="page"{% endif %}>Obsidian</a>
+                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/tiddlywiki.html" {% if page == 'home' %}aria-current="page"{% endif %}>TiddlyWiki</a>
                 </li>
             </ul>
         </nav>
