Added a master Flexbox container and 100% viewport height to the sidebar, in order to implement the left-sidebar layout paradigm.

--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -7,7 +7,9 @@
         <script type="module" src="./js/main.js"></script>
     </head>
     <body>
-        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px;">
+        
+        <div class="d-flex">
+        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px; min-height: 100vh;">
             <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="/">
                 <img src="./img/sitelogo.png" alt="image of a computer monitor with a closing XML tag on it">
                 <span class="fs-4">IDT 554</span>
@@ -32,6 +34,7 @@
         <footer>
             <!-- universal footer here -->
         </footer>
-        
+        </div>
+
     </body>
 </html>
