--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@
 
 {% block content %}
         <main>
-            <div class="container py-4 px-3 mx-auto">
+            <div class="container-fluid p-4">
                 <h1>Hello, Bootstrap and Vite!</h1>
                 <button class="btn btn-primary">Primary button</button>
             </div>
