--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -18,10 +18,10 @@
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
                     <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/index.html" {% if page == 'home' %}aria-current="page"{% endif %}>Home</a>
-                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/about.html" {% if page == 'home' %}aria-current="page"{% endif %}>About</a>
-                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/logseq.html" {% if page == 'home' %}aria-current="page"{% endif %}>Logseq</a>
-                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/obsidian.html" {% if page == 'home' %}aria-current="page"{% endif %}>Obsidian</a>
-                    <a class="nav-link{% if page == 'home' %} active{% endif %}" href="/tiddlywiki.html" {% if page == 'home' %}aria-current="page"{% endif %}>TiddlyWiki</a>
+                    <a class="nav-link{% if page == 'about' %} active{% endif %}" href="/about.html" {% if page == 'home' %}aria-current="page"{% endif %}>About</a>
+                    <a class="nav-link{% if page == 'logseq' %} active{% endif %}" href="/logseq.html" {% if page == 'home' %}aria-current="page"{% endif %}>Logseq</a>
+                    <a class="nav-link{% if page == 'obsidian' %} active{% endif %}" href="/obsidian.html" {% if page == 'home' %}aria-current="page"{% endif %}>Obsidian</a>
+                    <a class="nav-link{% if page == 'tiddlywiki' %} active{% endif %}" href="/tiddlywiki.html" {% if page == 'home' %}aria-current="page"{% endif %}>TiddlyWiki</a>
                 </li>
             </ul>
         </nav>
