--- a/src/index.njk
+++ b/src/index.njk
@@ -5,10 +5,26 @@
 {% block content %}
         <main>
             <div class="container-fluid p-4">
-                <div class="row py-5 text-center">
+                <div class="row py-5">
                     <h1 class="display-4">Knowledge is Personal</h1>
                     <p class="lead text-muted">Open Zettelkasten Systems Compared</p>
-                    <button class="btn btn-primary">Primary button</button>
+                    <article class="mt-4">
+                    <section>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-5">
+                                <p>Whenever specialized information needs to be applied effectively, personal knowledge management becomes practically indispensible. While some knowledge management systems might benefit from being integrated into specific platforms or workflows, even domain restricted corporate concerns should take in to consideration the empowering utility of being able to migrate a digital zettelkasten onto any platform. That German word is associated with old punch card files and reasearch cards bursting out of manila folders in packed boxes in professors&apos; attics. The augmentation of digital technology should make us even more free to collect, annotate, and cross-reference anything&ndash;not less free.</p>
+                                
+                                <p>Here <em>freedom</em> is not meant in the same sense as in the context of open source software. In the present context, <em>free</em> neither means <em>free of cost</em> nor <em>free speech</em>; although both of those concepts are relevant to all three of the software applications reviewed here, and two out of them are open source. The most relevant sense of the term is the power to do whatever we will with our own property&ndash;the digitally archived connections charted through the ocean of information by our minds. <strong>Logseq</strong>, <strong>Obsidian</strong>, and <strong>TiddlyWiki</strong> are worth evaluating for their comparative capabilities to muster the mind&apos;s peripersonal reach.</p>
+                            </div>
+                            <div class="col-md-6 col-lg-5">
+                                <figure class="figure">
+                                    <img src="./img/mj-brainstorm.png" alt="An abstract AI-generated art like an oilpainting, showing a face surrounded by a stormy sea, a thunderbolt beside the face" class="figure-img img-fluid rounded shadow">
+                                    <figcaption class="figure-caption text-center">Knowledge management is a personal journey through an ocean of information</figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </section>
+                    </article>
                 </div>
             </div>
         </main>
