Tweaked spacing of homepage columns.

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@
                     <p class="lead text-muted">Open Zettelkasten Systems Compared</p>
                     <article class="mt-4">
                     <section>
-                        <div class="row">
+                        <div class="row lg-mx-3 md-mx-2 gx-5">
                             <div class="col-md-6 col-lg-5">
                                 <p>Whenever specialized information needs to be applied effectively, personal knowledge management becomes practically indispensible. While some knowledge management systems might benefit from being integrated into specific platforms or workflows, even domain restricted corporate concerns should take in to consideration the empowering utility of being able to migrate a digital zettelkasten onto any platform. That German word is associated with old punch card files and reasearch cards bursting out of manila folders in packed boxes in professors&apos; attics. The augmentation of digital technology should make us even more free to collect, annotate, and cross-reference anything&ndash;not less free.</p>
                                 
