Attached assets for download.

--- a/src/index.njk
+++ b/src/index.njk
@@ -31,7 +31,7 @@
                                     <div class="card-body">
                                         <h3 class="card-title h4">Logseq</h3>
                                         <p class="card-text">An open-source platform for journaling and studying, built on a local database with synchronization features.</p>
-                                        <a href="/logseq.html" class="btn btn-outline-primary">Download JSON</a>
+                                        <a href="./public/m14-logseq.json" class="btn btn-outline-primary">Download JSON</a>
                                         <p class="small">To obtain the example Logseq project, you must install the software and then import the provide JSON file, from which it will construct its database.</p>
                                     </div>
                                 </div>
@@ -41,7 +41,7 @@
                                     <div class="card-body">
                                         <h3 class="card-title h4">Obsidian</h3>
                                         <p class="card-text">A text editor that manages directories of plain text Markdown files as a knowledge base, simple enough for anyone, offering low overhead note taking, but low level enough to please technical experts.</p>
-                                        <a href="/obsidian.html" class="btn btn-outline-primary">Download ZIP</a>
+                                        <a href="./public/m14-obsidian.zip" class="btn btn-outline-primary">Download ZIP</a>
                                         <p class="small">Obsidian projects are just directories full of Markdown files. Unzip the compressed archive as a folder, then open the Obsidian app and select the new directory.</p>
                                     </div>
                                 </div>
@@ -51,7 +51,7 @@
                                     <div class="card-body">
                                         <h3 class="card-title h4">TiddlyWiki</h3>
                                         <p class="card-text">A non-linear notebook implemented as a single web page, a powerful free-form hypertext platform, a blank canvas for representing any associative concept in the browser.</p>
-                                        <a href="/tiddlywiki.html" class="btn btn-outline-primary">Download HTML</a>
+                                        <a href="./public/m14-tiddlywiki.html" class="btn btn-outline-primary">Download HTML</a>
                                         <p class="small">Save the provied HTML file to your computer and open it in any web browser, or simply navigate to it.</p>
                                     </div>
                                 </div>
