Added a rough initial implementation of the footer.

--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -34,10 +34,12 @@
                 {% block content %}{% endblock %}
             </main>
 
-            <footer>
-                <!-- universal footer here -->
-            </footer>
+
         </div>
+
+        <footer class="footer mt-auto py-3 bg-success">
+            <!-- universal footer here -->
+        </footer>
 
     </body>
 </html>
