--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -39,6 +39,7 @@
 
         <footer class="footer mt-auto py-3 bg-success">
             <!-- universal footer here -->
+            <p>Here's some dummy text for the footer.</p>
         </footer>
 
     </body>
