--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,29 @@
 @import "bootstrap/scss/bootstrap";
 
+body {
+    position: relative;
+}
+
 // Custom CSS
 div.d-flex > nav {
     width: 100%;  // for medium breakpoint, the default -- horizontal
     @media screen and (min-width: 992px) {  // large breakpoint -- the ideal desktop experience -- left sidebar
         width: 200px;
         min-height: 100vh;
+        z-index: 1;
     }
     @media screen and (min-width: 1200px) {  // Wider navbar for full screen on full res monitors
         width: 320px;
+    }
+}
+
+footer {
+    @media screen and (min-width: 1200px) {
+        max-width: 100vw;
+        position: absolute;
+        height: 100px;
+        left: 320px;
+        width: calc(100% - 320px);
+        bottom: 0;
     }
 }
