SVG GitHub icon/link.

--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -39,7 +39,7 @@
 
         <footer class="footer mt-auto py-3 bg-success">
             <!-- universal footer here -->
-            <p>Check out: <a href="https:sunypoly.edu/">IDT Program</a>, <a href="#">Bootstrap 5 with Vite</a>, <a href="#">Vituum</a> | <a href="#">Logseq</a>, <a href="#">Obsidian</a>, <a href=#>TiddlyWiki</a> | <a href="https://www.strivenword.com/">Strivenword</a>, GitHub. </p>
+            <p>Check out: <a href="https:sunypoly.edu/">IDT Program</a>, <a href="#">Bootstrap 5 with Vite</a>, <a href="#">Vituum</a> | <a href="#">Logseq</a>, <a href="#">Obsidian</a>, <a href=#>TiddlyWiki</a> | <a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a>  </p>
         </footer>
 
     </body>
