SCSS override for smaller display text patterns.

--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -37,9 +37,9 @@
 
         </div>
 
-        <footer class="footer mt-auto py-3 bg-success">
+        <footer class="footer d-flex flex-row-reverse mt-auto py-3 px-3 bg-success">
             <!-- universal footer here -->
-            <p>Check out: <a href="https:sunypoly.edu/">IDT Program</a>, <a href="#">Bootstrap 5 with Vite</a>, <a href="#">Vituum</a> | <a href="#">Logseq</a>, <a href="#">Obsidian</a>, <a href=#>TiddlyWiki</a> | <a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a>  </p>
+            <p><span class="display-8 col-sm-2">Check out</span>: <a href="https:sunypoly.edu/">IDT Program</a>, <a href="#">Bootstrap 5 with Vite</a>, <a href="#">Vituum</a> | <a href="#">Logseq</a>, <a href="#">Obsidian</a>, <a href=#>TiddlyWiki</a> | <a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a>  </p>
         </footer>
 
     </body>
