Changed footer content pattern.

--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -37,9 +37,29 @@
 
         </div>
 
-        <footer class="footer d-flex flex-row-reverse mt-auto py-3 px-3 bg-success">
-            <!-- universal footer here -->
-            <p><span class="display-8 col-sm-2">Check out</span>: <a href="https:sunypoly.edu/">IDT Program</a>, <a href="#">Bootstrap 5 with Vite</a>, <a href="#">Vituum</a> | <a href="#">Logseq</a>, <a href="#">Obsidian</a>, <a href=#>TiddlyWiki</a> | <a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a>  </p>
+        <footer class="footer container bg-success">
+            <div class="d-flex flex-row">
+                <div class="p-4">
+                    <h2 class="display-8">Program links</h2>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="https:sunypoly.edu/">IDT Program</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="p-4">
+                    <h2 class="display-8">Check out</h2>
+                    <ul class="list-unstyled">
+                        <li class=""><a href="#">Bootstrap 5 with Vite</a>, </li>
+                        <li class=""><a href="#">Vituum</a> | </li>
+                        <li class=""><a href="#">Logseq</a>, </li>
+                        <li class=""><a href="#">Obsidian</a>, </li>
+                        <li class=""><li class=""><a href="#">TiddlyWiki</a> | </li>
+                        <li class=""><a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a></li>
+                    </ul>
+
+                </div>
+            </div>
         </footer>
 
     </body>
