--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -37,27 +37,34 @@
 
         </div>
 
-        <footer class="footer container bg-success">
-            <div class="d-flex flex-row">
-                <div class="p-4">
-                    <h2 class="display-8">Program links</h2>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="https:sunypoly.edu/">IDT Program</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="p-4">
-                    <h2 class="display-8">Check out</h2>
-                    <ul class="list-unstyled">
-                        <li class=""><a href="#">Bootstrap 5 with Vite</a>, </li>
-                        <li class=""><a href="#">Vituum</a> | </li>
-                        <li class=""><a href="#">Logseq</a>, </li>
-                        <li class=""><a href="#">Obsidian</a>, </li>
-                        <li class=""><li class=""><a href="#">TiddlyWiki</a> | </li>
-                        <li class=""><a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a></li>
-                    </ul>
-
+        <footer class="footer bg-success">
+            <div class="container">
+                <div class="d-flex flex-row flex-row-reverse">
+                    <div class="p-4">
+                        <h2 class="display-8">Class</h2>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="https:sunypoly.edu/">IDT Program</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="display-8">Technologies</h2>
+                        <ul class="list-unstyled">
+                            <li class=""><a href="#">Bootstrap 5 with Vite</a></li>
+                            <li class=""><a href="#">Vituum</a></li>
+                            <li class=""><a href="#">Logseq</a></li>
+                            <li class=""><a href="#">Obsidian</a></li>
+                            <li class=""><li class=""><a href="#">TiddlyWiki</a></li>
+                        </ul>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="display-8">Personal</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="https://www.strivenword.com">Blog</a></li>
+                            <li class=""><a href="https://github.com/StrivenWord/idt554">{% include 'partials/gh.svg.njk' %}</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </footer>
