--- a/src/layout/base.njk
+++ b/src/layout/base.njk
@@ -39,23 +39,23 @@
 
         <footer class="footer bg-success">
             <div class="container">
-                <div class="d-flex flex-row flex-row-reverse">
+                <div class="d-flex flex-row  justify-content-lg-end justify-content-md-center">
                     <div class="p-4">
-                        <h2 class="display-8">Class</h2>
+                        <h2 class="display-8">Technologies</h2>
+                        <ul class="list-unstyled">
+                            <li class=""><a href="#">Logseq</a></li>
+                            <li class=""><a href="#">Obsidian</a></li>
+                            <li class=""><li class=""><a href="#">TiddlyWiki</a></li>
+                        </ul>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="display-8">Site</h2>
                         <ul class="list-unstyled">
                             <li>
                                 <a href="https:sunypoly.edu/">IDT Program</a>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="p-4">
-                        <h2 class="display-8">Technologies</h2>
-                        <ul class="list-unstyled">
                             <li class=""><a href="#">Bootstrap 5 with Vite</a></li>
                             <li class=""><a href="#">Vituum</a></li>
-                            <li class=""><a href="#">Logseq</a></li>
-                            <li class=""><a href="#">Obsidian</a></li>
-                            <li class=""><li class=""><a href="#">TiddlyWiki</a></li>
                         </ul>
                     </div>
                     <div class="p-4">
@@ -70,4 +70,4 @@
         </footer>
 
     </body>
-</html>
+    
