--- a/src/index.njk
+++ b/src/index.njk
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="row mt-5">
+                        <section class="row mt-5" id="cards">
                             <div class="col-md-4 mb-4">
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
