Added relative positioning to shift the chevrons slightly upward in their alignment relative to the headings.

--- a/src/index.njk
+++ b/src/index.njk
@@ -27,11 +27,13 @@
             <section class="row mt-5" id="cards">
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <h3 class="card-title h4">Logseq</h3>
-                        {% include 'partials/expand.svg.njk' %}
-                        <p class="card-text">An open-source platform for journaling and studying, built on a local database with synchronization features.</p>
-                        <a href="./public/m14-logseq.json" class="btn btn-outline-primary">Download JSON</a>
-                        <p class="small">To obtain the example Logseq project, you must install the software and then import the provide JSON file, from which it will construct its database.</p>
+                        <div class="card-body">
+                            <h3 class="card-title h4">Logseq</h3>
+                            {% include 'partials/expand.svg.njk' %}
+                            <p class="card-text">An open-source platform for journaling and studying, built on a local database with synchronization features.</p>
+                            <a href="./public/m14-logseq.json" class="btn btn-outline-primary">Download JSON</a>
+                            <p class="small">To obtain the example Logseq project, you must install the software and then import the provide JSON file, from which it will construct its database.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
